<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tarea2Equipo</string>
    <string name="logo_desc">Logo de Hogwarts</string>
    <string name="descripcion_app">Aprende más sobre los ingredientes más comunes para hacer pociones</string>
    <string name="texto_apodo">Ingresa tu nombre para personalizar la experiencia:</string>
    <string name="texto_correo">Ingresa la casa a la que perteneces:</string>
    <string name="hint_nombre">Ingresa tu nombre</string>
    <string name="hint_casa">Ingresa tu casa</string>
    <string name="boton_continuar">Continuar</string>
    <string name="texto_instruccion">Seleccione un ingrediente para saber sus propiedades</string>
    <string name="ingrediente1_nombre">Gillyweed</string>
    <string name="ingrediente2_nombre">Pelo de unicornio</string>
    <string name="ingrediente3_nombre">Mandragora</string>
    <string name="ingrediente4_nombre">Tentácula venenosa</string>
    <string name="ingrediente_1">Ingrediente 1</string>
    <string name="ingrediente_2">Ingrediente 2</string>
    <string name="ingrediente_3">Ingrediente 3</string>
    <string name="ingrediente_4">Ingrediente 4</string>
    <string name="default_ingredient_name">Ingrediente Desconocido</string>
    <string name="gillyweed_propiedades_desc">Las Bránquialgas permiten a quien las consume respirar bajo el agua y les da branquias y membranas entre los dedos. Su efecto dura aproximadamente una hora. Es esencial para el Torneo de los Tres Magos.</string>
    <string name="unicornhair_propiedades_desc">El pelo de unicornio es una sustancia poderosa y delicada. Es un núcleo común para varitas mágicas y se utiliza en pociones curativas por su gran pureza y propiedades mágicas. Es extremadamente difícil de obtener.</string>
    <string name="mandragora_propiedades_desc">La Mandrágora se utiliza principalmente para curar a las personas que han sido petrificadas. Su llanto es mortal, por lo que es necesario usar orejeras al manipularla. El proceso de maduración es largo.</string>
    <string name="tentacula_propiedades_desc">La Tentácula Venenosa es una planta altamente peligrosa, clasificada como de clase XXXXX. Sus tentáculos contienen un veneno mortal. Sus hojas, sin embargo, se utilizan en algunas pociones, y es un ingrediente prohibido.</string>
    <string name="default_user_name">Estudiante</string>
    <string name="default_house_name">Hogwarts</string>
    <string name="error_input_name">Por favor ingresa tu nombre</string>
    <string name="error_input_house">Por favor ingresa tu casa</string>
    <string name="toast_home">Ir a Inicio</string>
    <string name="toast_profile">Ir a Perfil</string>
    <string name="toast_settings">Ir a Configuración</string>
    <string name="toast_search">Buscando…</string> <string name="toast_notifications">Ver notificaciones</string>
    <string name="toast_help">Ayuda</string>
    <string name="profile_message">Perfil de %1$s</string>
    <string name="settings_message">Configuración</string>
    <string name="search_message">Buscando…</string> <string name="notifications_message">Notificaciones</string>
    <string name="help_message">Ayuda</string>
    <string name="boton_regresar">Regresar a la Lista</string>
    <string name="ingrediente_nombre_placeholder">Nombre del Ingrediente</string>
    <string name="titulo_propiedades">Propiedades:</string>
    <string name="descripcion_placeholder">Cargando descripción…</string> <string name="descripcion_imagen_ingrediente">Imagen del Ingrediente</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="menu_search">Buscar</string>
    <string name="menu_notifications">Notificaciones</string>
    <string name="menu_help">Ayuda</string>
    <string name="drawer_menu_home">Inicio</string>
    <string name="drawer_menu_profile">Perfil</string>
    <string name="drawer_menu_settings">Configuración</string>
</resources>